tests/error/modifier_errors/dagger_assign.err
Error: Invalid expression in dagger (at $FILE:7:8)
  | 
5 | def test() -> None:
6 |     with dagger:
7 |         a = 3
  |         ^^^^^ Assignment found in a dagger context
  | 
6 |     with dagger:
  |          ------ dagger modifier is used here

Guppy compilation failed due to 1 previous error
